updated index and css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         </div>
     </div>
 
+    <div id="legend">
+    <div class="legend-title">Total Deaths</div>
+    <div class="legend-item"><span class="dot small"></span> 0 - 10</div>
+    <div class="legend-item"><span class="dot medium"></span> 11 - 50</div>
+    <div class="legend-item"><span class="dot large"></span> 50+</div>
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
